<resources>
    <string name="app_name">AlarmApp</string>
    <string name="titik">...</string>
    <string name="tanggal_alarm">Tanggal Alarm</string>
    <string name="waktu_alarm">Waktu Alarm</string>
    <string name="note">Note</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="repeating_alarm">Repeating Alarm</string>
    <string name="set_one_time_alarm">Set One Time Alarm</string>
    <string name="set_repeating_alarm">Set Repeating Alarm</string>
    <string name="cancel_alarm">Cancel Alarm</string>
</resources>
